--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Property Registration</title>
-    <link type="text/css" rel="stylesheet" href="../../Desktop/HubBB-master(1)/HubBB-master/assets/css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 
     <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800' rel='stylesheet' type='text/css'>
@@ -53,32 +53,32 @@
 
             <tr>
                 <td><label for="bbname">B&B Name: *</label></td>
-                <td><input type="text" class="inputform" name="bbname" value="Enter your B&B Name" required /></td>
+                <td><input id="bbname" type="text" class="inputform" name="bbname" value="Enter your B&B Name" required /></td>
             </tr>
             <tr><td>
                 <label for="address">Address: *</label></td>
-                <td><input type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
+                <td><input id="address" type="text" class="inputform" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
             </tr>
 
             <tr><td>
                 <label for="address2">Address Line 2: *</label></td>
-                <td><input type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
+                <td><input id="address2" type="text" class="inputform" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
             </tr>
 
             <tr><td>
                 <label for="city">City: *</label></td>
-                <td><input type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
+                <td><input id="city" type="text" class="inputform" name="city" placeholder="Enter City" size="30" maxlength="50" required /></td>
             </tr>
 
 
             <tr><td>
                 <label for="telephone">Telephone: *</label></td>
-                <td><input type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
+                <td><input id="telephone" type="text" class="inputform" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
             </tr>
             <tr>
                 <td>
                     <label for="email">Email: *</label></td>
-                <td><input type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
+                <td><input id="email" type="text" class="inputform" name="email" placeholder="email" size="30" maxlength="50" required /></td>
             </tr>
 
 
@@ -103,18 +103,18 @@
             </tr>
 
             <tr><td>
-                <label for="check-out">Check-out time: *</label></td>
-                <td><input type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
+                <label for="checkout">Check-out time: *</label></td>
+                <td><input id="checkout" type="text" class="inputform" name="check-out" placeholder="Enter the check-out time" required /></td>
             </tr>
 
             <tr><td>
                 <label for="picture">Upload a picture: *</label></td>
-                <td><input type="text" class="inputform" name="picture" required /></td>
+                <td><input id="picture" type="text" class="inputform" name="picture" required /></td>
             </tr>
 
             <tr><td>
-                <label for="pets">Pets Allowed: *</label></td>
-                <td><select class="inputform" name="title">
+                <label  for="pets">Pets Allowed: *</label></td>
+                <td><select id="pets" class="inputform" name="title">
                     <option value="">Select Yes or No</option>
                     <option value="Yes">Yes</option>
                     <option value="No">No</option>
