--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -53,7 +53,7 @@
 
             <tr>
                 <td><label for="bbname">B&B Name: *</label></td>
-                <td><input id="bbname" type="text" class="inputform" name="bbname" value="Enter your B&B Name" required /></td>
+                <td><input id="bbname" type="text" class="inputform" name="bbname" placeholder="Enter your B&B Name" required /></td>
             </tr>
             <tr><td>
                 <label for="address">Address: *</label></td>
@@ -86,20 +86,20 @@
 
             <tr><td>
                 <label for="bbdescription">B&B Description: *</label></td>
-                <td><input type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
+                <td><input id="bbdescription" type="text" class="inputform" name="bbdescription" placeholder=" Enter a description of your B&B" size="30" maxlength="50" required /></td>
             </tr>
 
             <tr><td>
                 <label for="roomdescription">Room Description: *</label></td>
-                <td><input type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
+                <td><input id="roomdescription" type="text" class="inputform" name="roomdescription" placeholder=" Enter a description of your rooms" size="30" maxlength="50" required /></td>
             </tr>
             <tr><td>
                 <label for="price">Price: *</label></td>
-                <td><input type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
+                <td><input id="price" type="text" class="inputform" name="price" placeholder="Enter the price per night" required /></td>
             </tr>
             <tr><td>
-                <label for="check-in">Check-in time: *</label></td>
-                <td><input type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
+                <label for="checkin">Check-in time: *</label></td>
+                <td><input id="checkin" type="text" class="inputform" name="check-in" placeholder="Enter the check-in time" required /></td>
             </tr>
 
             <tr><td>
