--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -46,7 +46,7 @@ theB&Bhub.com
 <main>
     <!--onsubmit="return validateOwner(this);"  javascript method-->
 <div class="">
-<form action="ownerResult.php" method="post" id="form">
+<form action="ownerRegistrationResultPage.php" method="post" id="form">
 
         <table class="table1">
             <tr><td colspan="2">Register to List your Property!</td></tr>
