--- a/B&Bregistration.html
+++ b/B&Bregistration.html
@@ -25,8 +25,8 @@
 
         <ul class="moveright"><li><a href="B&Bregistration.html">Help</a></li>
             <li><a href="Customerinfo.html">Contact</a></li>
-            <li><a href="OwnerRegistration.html">Register</a></li>
-            <li><a href="B&Bregistration.html">Sign In</a></li>
+           <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
+            <li><a href="OwnerRegistration.html">Sign In</a></li>
             <li><a href="Home.php">Search</a></li>
 
 
