--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -49,7 +49,7 @@ theB&Bhub.com
 <form action="ownerRegistrationResultPage.php" method="post" id="form">
 
         <table class="table1">
-            <tr><td colspan="2">Sign In</td></tr>
+            <tr><td colspan="2">Owner Sign In</td></tr>
             <tr><td class="small">* Required Fields</td></tr>
 
                         <tr><td>
@@ -61,6 +61,7 @@ theB&Bhub.com
                 <td>    <input type="password" class="inputform" id="password" name="password" placeholder="enter password" required>
                 </td>
             </tr>
+            <tr><td><Button>Sign In</Button></td></tr>
 
         </table></form>
 </div>
