--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -61,7 +61,7 @@ theB&Bhub.com
                 <td>    <input type="password" class="inputform" id="password" name="password" placeholder="enter password" required>
                 </td>
             </tr>
-            <tr><td><Button>Sign In</Button></td></tr>
+            <tr><td></td><td><Button>Sign In</Button></td></tr>
 
         </table></form>
 </div>
