--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -66,7 +66,7 @@ theB&Bhub.com
                         document.getElementById("warning").innerHTML = xmlhttp.responseText;
                     }
                 };
-                xmlhttp.open("POST","verifyUserFile.php?email="+str,true);
+                xmlhttp.open("GET","verifyUserFile.php?email="+str,true);
                 xmlhttp.send();
             }
         }
@@ -81,7 +81,7 @@ theB&Bhub.com
 
     <!--onsubmit="return validateOwner(this);"  javascript method-->
 <div class="">
-<form onSubmit="verifyUser(email.value)" method="POST" id="form">
+<form onSubmit="verifyUser(email.value)" method="GET" id="form">
 
         <table class="table1">
             <tr><td colspan="2">Owner's Page</td></tr>
