--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -99,7 +99,7 @@ theB&Bhub.com
             <tr><td></td><td><Button>Sign In</Button></td></tr>
 
         </table></form>
-    <p id="warning" style="color: #ff0006;"></p>
+    <div id="warning" style="color: #ff0006;"></div>
 </div>
 
     <div class="right2">
