--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -51,7 +51,7 @@ theB&Bhub.com
     <script>
         function verifyUser(str) {
             if (str == "") {
-                document.getElementById("txtHint").innerHTML = "";
+                document.getElementById("warning").innerHTML = "eeeh?";
                 return;
             } else {
                 if (window.XMLHttpRequest) {
