--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -50,7 +50,7 @@ theB&Bhub.com
 
     <script>
         function verifyUser(str) {
-            if (str == "") {
+            if (str == "eh?") {
                 document.getElementById("warning").innerHTML = "eeeh?";
                 return;
             } else {
