--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -66,7 +66,7 @@ theB&Bhub.com
                         document.getElementById("warning").innerHTML = xmlhttp.responseText;
                     }
                 };
-                xmlhttp.open("GET","verifyUserFile.php?emails="+str,true);
+                xmlhttp.open("GET","verifyUserFile.php?email="+str,true);
                 xmlhttp.send();
             }
         }
