--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -81,7 +81,7 @@ theB&Bhub.com
 
     <!--onsubmit="return validateOwner(this);"  javascript method-->
 <div class="">
-<form id="form" onSubmit="verifyUser(email.value)" >
+<form id="form" onchange="verifyUser(email.value)" >
 
         <table class="table1">
             <tr><td colspan="2">Owner's Page</td></tr>
