--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -48,7 +48,7 @@ theB&Bhub.com
 
 
 
-    <script>
+    <script language = "javascript" type = "text/javascript">
         function verifyUser(str) {
             if (str == "eh?") {
                 document.getElementById("warning").innerHTML = "eeeh?";
