--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -46,61 +46,71 @@ theB&Bhub.com
 <main>
 
 
-
-
     <script language = "javascript" type = "text/javascript">
-        function verifyUser(str) {
-            if (str == "eh?") {
-                document.getElementById("warning").innerHTML = "eeeh?";
-                return;
-            } else {
-                if (window.XMLHttpRequest) {
-                    // code for IE7+, Firefox, Chrome, Opera, Safari
-                    xmlhttp = new XMLHttpRequest();
-                } else {
-                    // code for IE6, IE5
-                    xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
-                }
-                xmlhttp.onreadystatechange = function() {
-                    if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                        document.getElementById("warning").innerHTML = xmlhttp.responseText;
+        <!--
+        //Browser Support Code
+        function ajaxFunction(){
+            var ajaxRequest;  // The variable that makes Ajax possible!
+
+            try {
+                // Opera 8.0+, Firefox, Safari
+                ajaxRequest = new XMLHttpRequest();
+            }catch (e) {
+                // Internet Explorer Browsers
+                try {
+                    ajaxRequest = new ActiveXObject("Msxml2.XMLHTTP");
+                }catch (e) {
+                    try{
+                        ajaxRequest = new ActiveXObject("Microsoft.XMLHTTP");
+                    }catch (e){
+                        // Something went wrong
+                        alert("Your browser broke!");
+                        return false;
                     }
-                };
-                xmlhttp.open("GET","verifyUserFile.php&email="+str,true);
-                xmlhttp.send();
+                }
             }
+
+            // Create a function that will receive data
+            // sent from the server and will update
+            // div section in the same page.
+
+            ajaxRequest.onreadystatechange = function(){
+                if(ajaxRequest.readyState == 4){
+                    var ajaxDisplay = document.getElementById('ajaxDiv');
+                    ajaxDisplay.innerHTML = ajaxRequest.responseText;
+                }
+            }
+
+            // Now get the value from user and pass it to
+            // server script.
+
+            var age = document.getElementById('age').value;
+            var wpm = document.getElementById('wpm').value;
+            var sex = document.getElementById('sex').value;
+            var queryString = "?age=" + age ;
+
+            queryString +=  "&wpm=" + wpm + "&sex=" + sex;
+            ajaxRequest.open("GET", "ajax-example.php" + queryString, true);
+            ajaxRequest.send(null);
         }
+        //-->
     </script>
 
+    <form name = 'myForm'>
+        Max Age: <input type = 'text' id = 'age' /> <br />
+        Max WPM: <input type = 'text' id = 'wpm' />
+        <br />
 
+        Sex: <select id = 'sex'>
+        <option value = "m">m</option>
+        <option value = "f">f</option>
+    </select>
 
+        <input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/>
 
+    </form>
 
-
-
-
-    <!--onsubmit="return validateOwner(this);"  javascript method-->
-<div class="">
-<form id="form" >
-
-        <table class="table1">
-            <tr><td colspan="2">Owner's Page</td></tr>
-            <tr><td class="small">* Required Fields</td></tr>
-
-                        <tr><td>
-                            <label for="email">Email: *</label></td>
-                            <td><input type="text" class="inputform" id="email" name="email" placeholder="email" size="30" maxlength="50" required /></td>
-                        </tr>
-            <tr>
-                <td><label for="password">Password: *</label></td>
-                <td>    <input type="password" class="inputform" id="password" name="password" placeholder="enter password" required>
-                </td>
-            </tr>
-            <tr><td></td><td><input type="button" onClick="verifyUser(email.value)" value="Sign In"></td></tr>
-
-        </table></form>
-    <div id="warning" style="color: #ff0006;"></div>
-</div>
+    <div id = 'ajaxDiv'>Your result will display here</div>
 
     <div class="right2">
 
