--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -115,7 +115,7 @@ theB&Bhub.com
 
             </form>
 
-    <div id = 'ajaxDiv'>Your result will display here</div>
+    <div style="color: #ff0006" id = 'ajaxDiv'>Your result will display here</div>
 
     <div class="right2">
 
