--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -97,8 +97,9 @@ theB&Bhub.com
     </script>
 
     <form class="table1" name = 'myForm'>
-
+<table>
             <tr><td colspan="2">Owner's Page</td></tr>
+
             <tr><td class="small">* Required Fields</td></tr>
 
             <tr><td>
@@ -112,7 +113,7 @@ theB&Bhub.com
             </tr>
 
             <input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/>
-
+</table>
             </form>
 
     <div style="color: #ff0006" id = 'ajaxDiv'>Your result will display here</div>
