--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -112,7 +112,7 @@ theB&Bhub.com
                 </td>
             </tr>
 
-            <input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/>
+            <tr><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></tr>
 </table>
             </form>
 
