--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -112,7 +112,7 @@ theB&Bhub.com
                 </td>
             </tr>
 
-            <tr><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></td></tr>
+            <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></td></tr>
 </table>
             </form>
 
