--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -113,10 +113,11 @@ theB&Bhub.com
             </tr>
 
             <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></td></tr>
+    <tr><td colspan="2"><div style="color: #ff0006" id = 'ajaxDiv'>Your result will display here</div></td></tr>
 </table>
             </form>
 
-    <div style="color: #ff0006" id = 'ajaxDiv'>Your result will display here</div>
+
 
     <div class="right2">
 
