--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -112,8 +112,9 @@ theB&Bhub.com
                 </td>
             </tr>
 
-            <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></td></tr>
-    <tr><td colspan="2"><div style="color: #ff0006" id = 'ajaxDiv'>Your result will display here</div></td></tr>
+    <tr><td colspan="2"><div style="color: #ff0006" id = 'ajaxDiv'></div></td></tr>
+    <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></td></tr>
+
 </table>
             </form>
 
