--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -77,7 +77,10 @@ theB&Bhub.com
             ajaxRequest.onreadystatechange = function(){
                 if(ajaxRequest.readyState == 4){
                     var ajaxDisplay = document.getElementById('ajaxDiv');
-                    ajaxDisplay.innerHTML = ajaxRequest.responseText;
+                    if(ajaxRequest.responseText == "dinna recognise yer email, son") {
+                        ajaxDisplay.innerHTML = ajaxRequest.responseText;
+                        ajaxDisplay.innerHTML = "<input id='register' onclick='' type='button'>Register</>";
+                    }else{ajaxDisplay.innerHTML = ajaxRequest.responseText;}
                 }
             }
 
