--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -64,7 +64,7 @@ theB&Bhub.com
                         ajaxRequest = new ActiveXObject("Microsoft.XMLHTTP");
                     }catch (e){
                         // Something went wrong
-                        alert("Your browser broke!");
+                        alert("Your browsers no working!");
                         return false;
                     }
                 }
@@ -115,7 +115,7 @@ theB&Bhub.com
                 </td>
             </tr>
 
-    <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Query MySQL'/></td></tr>
+    <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Sign In'/></td></tr>
     <tr><td colspan="2"><div style="color: #ff0006" id = 'ajaxDiv'></div></td></tr>
 
 </table>
