--- a/OwnerRegistration.html
+++ b/OwnerRegistration.html
@@ -13,8 +13,8 @@
 
 <header>
     <div class="right">
-theB&Bhub.com
-</div>
+        theB&Bhub.com
+    </div>
 </header>
 
 <div class="nav">
@@ -26,7 +26,7 @@ theB&Bhub.com
         <ul class="moveright"><li><a href="B&Bregistration.html">Help</a></li>
             <li><a href="Customerinfo.html">Contact</a></li>
             <!-- <li><a href="B&Bregistration.html">Register</a></li> -->
-            <li><a href="OwnerRegistration.html">Owner's Page</a></li>
+            <li><a href="OwnerSignIn.html">Owner's Page</a></li>
             <li><a href="Home.php">Search</a></li>
 
 
@@ -45,65 +45,15 @@ theB&Bhub.com
 
 <main>
 
+    <div class="">
+    <form action="ownerRegistrationResultPage.php" method="post" id="form">
 
-    <script language = "javascript" type = "text/javascript">
-        <!--
-        //Browser Support Code
-        function ajaxFunction(){
-            var ajaxRequest;  // The variable that makes Ajax possible!
-
-            try {
-                // Opera 8.0+, Firefox, Safari
-                ajaxRequest = new XMLHttpRequest();
-            }catch (e) {
-                // Internet Explorer Browsers
-                try {
-                    ajaxRequest = new ActiveXObject("Msxml2.XMLHTTP");
-                }catch (e) {
-                    try{
-                        ajaxRequest = new ActiveXObject("Microsoft.XMLHTTP");
-                    }catch (e){
-                        // Something went wrong
-                        alert("Your browsers no working!");
-                        return false;
-                    }
-                }
-            }
-
-            // Create a function that will receive data
-            // sent from the server and will update
-            // div section in the same page.
-
-            ajaxRequest.onreadystatechange = function(){
-                if(ajaxRequest.readyState == 4){
-                    var ajaxDisplay = document.getElementById('ajaxDiv');
-                    if(ajaxRequest.responseText == "dinna recognise yer email, son") {
-
-                        ajaxDisplay.innerHTML = ajaxRequest.responseText+"<br><input id='register' onclick='' type='button' value='Register'></>";
-                    }else{ajaxDisplay.innerHTML = ajaxRequest.responseText;}
-                }
-            }
-
-            // Now get the value from user and pass it to
-            // server script.
-
-            var email = document.getElementById('email').value;
-            var password = document.getElementById('password').value;
-
-            var queryString = "?email=" + email ;
-            queryString +=  "&password=" + password;
-
-            ajaxRequest.open("GET", "ajax-example.php" + queryString, true);
-            ajaxRequest.send(null);
-        }
-        //-->
-    </script>
-
-    <form class="table1" name = 'myForm'>
-<table>
-            <tr><td colspan="2">Owner's Page</td></tr>
-
+        <table class="table1">
+            <tr><td colspan="2">Register to List your Property!</td></tr>
             <tr><td class="small">* Required Fields</td></tr>
+
+
+
 
             <tr><td>
                 <label for="email">Email: *</label></td>
@@ -115,28 +65,97 @@ theB&Bhub.com
                 </td>
             </tr>
 
-    <tr><td></td><td><input type = 'button' onclick = 'ajaxFunction()' value = 'Sign In'/></td></tr>
-    <tr><td colspan="2"><div style="color: #ff0006" id = 'ajaxDiv'></div></td></tr>
+            <tr>
+                <td><label for="password2">Retype Password: *</label></td>
+                <td>    <input type="password" class="inputform" id="password2" name="password2" placeholder="enter password again" required>
+                </td>
+            </tr><td>
+            <label for="title">Title: *</label></td>
+            <td><select class="inputform" id="title" name="title">
+                <option value="">Select Title</option>
+                <option value="Mr">Mr</option>
+                <option value="Mrs">Mrs</option>
+                <option value="Miss">Miss</option>
+                <option value="Ms">Ms</option>
+            </select>
+            </td>
 
-</table>
-            </form>
 
+            <tr>
+                <td><label for="firstname">First Name: *</label></td>
+                <td><input type="text" class="inputform" id="firstname" name="firstname" placeholder="Enter your First Name" required /></td>
+            </tr>
+            <tr>
+                <td><label for="surname">Surname: *</label></td>
+                <td><input type="text" class="inputform" id="surname" name="surname" placeholder="Enter your Surname" required /></td>
+            </tr>
+            <tr>
+
+
+
+            <tr><td>
+                <label for="address">Address: *</label></td>
+                <td><input type="text" class="inputform" id="address" name="address" placeholder=" Enter first line of your address" size="30" maxlength="50" required /></td>
+            </tr>
+
+            <tr><td>
+                <label for="address2">Address Line 2: *</label></td>
+                <td><input type="text" class="inputform" id="address2" name="address2" placeholder=" Enter second line of your address" size="30" maxlength="50" required /></td>
+            </tr>
+
+
+            <tr><td>
+                <label for="telephone">Telephone: *</label></td>
+                <td><input type="text" class="inputform" id="telephone" name="telephone" placeholder=" Enter your telephone number" size="20" maxlength="20" required /></td>
+            </tr>
+
+            <tr><td></td>
+                <td><p align="right" ><input id="submit" type="submit" value="Submit" class="submit" /></p></td>
+            </tr>
+        </table></form>
+</div>
+
+<div class="right2">
+
+
+    <table class="table2">
+        <tr><td colspan="2"><p>Message Board - advertisements - user info</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 1</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 2</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 3</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 4</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 5</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 6</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 7</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 8</p></td></tr>
+        <tr class="tr2"><td class="t2"><p>row 9</p></td></tr>
+
+
+
+
+
+
+
+    </table>
+</div>
+
+<hr width="100%" align="left" size="1" color="#2f4f4f">
 
 
     <div class="right2">
 
 
-            <table class="table2">
-                <tr><td colspan="2"><p>Message Board - advertisements - user info</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 1</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 2</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 3</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 4</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 5</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 6</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 7</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 8</p></td></tr>
-                <tr class="tr2"><td class="t2"><p>row 9</p></td></tr>
+        <table class="table2">
+            <tr><td colspan="2"><p>Message Board - advertisements - user info</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 1</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 2</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 3</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 4</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 5</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 6</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 7</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 8</p></td></tr>
+            <tr class="tr2"><td class="t2"><p>row 9</p></td></tr>
 
 
 
@@ -144,7 +163,7 @@ theB&Bhub.com
 
 
 
-            </table>
+        </table>
     </div>
 
     <hr width="100%" align="left" size="1" color="#2f4f4f">
@@ -152,9 +171,10 @@ theB&Bhub.com
 
 </main>
 <div class="foot">
-<footer>
+    <footer>
 
-    <p>Copyright. Team D Solutions.</p>
-</footer></div>
+        <p>Copyright. Team D Solutions.</p>
+    </footer></div>
 </body>
 </html>
+
