--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -82,10 +82,10 @@ theB&Bhub.com
             ajaxRequest.onreadystatechange = function(){
                 if(ajaxRequest.readyState == 4){
                     var ajaxDisplay = document.getElementById('ajaxDiv');
-                        if(ajaxRequest.responseText == "aye, game"){
+                        if(ajaxRequest.responseText == "yes"){
                             $_SESSION["user"] = ""+ajaxDisplay.getElementById('email').value;
                             header("Location:http://bbhubapp.azurewebsites.net/OwnerSignIn.html");
-                            exit();
+
                         }
                         ajaxDisplay.innerHTML = ajaxRequest.responseText;
                 }
