--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -82,7 +82,7 @@ theB&Bhub.com
             ajaxRequest.onreadystatechange = function(){
                 if(ajaxRequest.readyState == 4){
                     var ajaxDisplay = document.getElementById('ajaxDiv');
-                        if(ajaxRequest.responseText == "yes"){
+                        if(ajaxRequest.responseText.equals("yes")){
                             $_SESSION["user"] = ""+ajaxDisplay.getElementById('email').value;
                             header("Location:http://bbhubapp.azurewebsites.net/OwnerSignIn.html");
 
