--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -84,7 +84,7 @@ theB&Bhub.com
                     var ajaxDisplay = document.getElementById('ajaxDiv');
                         if(ajaxRequest.responseText.equals("yes")){
                             $_SESSION["user"] = ""+ajaxDisplay.getElementById('email').value;
-                            window.location.assign("http://bbhubapp.azurewebsites.net/OwnerSignIn.html");
+                            window.location.assign("http://bbhubapp.azurewebsites.net/Home.php");
 
                         }
                         ajaxDisplay.innerHTML = ajaxRequest.responseText;
