--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -82,10 +82,13 @@ theB&Bhub.com
             ajaxRequest.onreadystatechange = function(){
                 if(ajaxRequest.readyState == 4){
                     var ajaxDisplay = document.getElementById('ajaxDiv');
-                       // if(ajaxRequest.responseText =="yes"){
+                        if(ajaxRequest.responseText =="yes"){
 
-                    //       ajaxDisplay.innerHTML = ajaxRequest.responseText;
-                    //    }
+                            ajaxRequest(function() {
+                                window.location.href = "/path/to/thankyoupage";
+                            });
+                           ajaxDisplay.innerHTML = ajaxRequest.responseText;
+                        }
                         ajaxDisplay.innerHTML = ajaxRequest.responseText;
                 }
             };
