--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -84,9 +84,8 @@ theB&Bhub.com
                     var ajaxDisplay = document.getElementById('ajaxDiv');
                         if(ajaxRequest.responseText =="yes"){
 
-                            ajaxRequest(function() {
-                                window.location.href = "/path/to/thankyoupage";
-                            });
+
+                            window.location.href = "http://www.msdn.com";
                            ajaxDisplay.innerHTML = ajaxRequest.responseText;
                         }
                         ajaxDisplay.innerHTML = ajaxRequest.responseText;
