--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -82,7 +82,7 @@ theB&Bhub.com
             ajaxRequest.onreadystatechange = function(){
                 if(ajaxRequest.readyState == 4){
                     var ajaxDisplay = document.getElementById('ajaxDiv');
-                        if(ajaxRequest.responseText =="yes"){
+                        if(ajaxRequest.responseText =="success!"){
 
 
                             window.location.href = "http://www.msdn.com";
