--- a/OwnerSignIn.html
+++ b/OwnerSignIn.html
@@ -85,7 +85,7 @@ theB&Bhub.com
                         if(ajaxRequest.responseText =="success!"){
 
 
-                            window.location.href = "http://www.msdn.com";
+                         //   window.location.href = "http://www.msdn.com";
                            ajaxDisplay.innerHTML = ajaxRequest.responseText;
                         }
                         ajaxDisplay.innerHTML = ajaxRequest.responseText;
